# gerc

./: 404.html  Cargo.toml  Makefile  README.md  RELEASE.md  api.html  architecture.html  certification.html  codegen.html  emitted-crate.html  flake.nix  hardening-matrix.html  index.html  intake.html  introduction.html  overview.html  print.html  readiness-scorecard.html  release.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0442d6c2.js  searchindex-0ae605e0.js  searchindex-7f801087.js  searchindex-962fe17a.js  searchindex-b0b4c08c.js  searchindex-bf5bd67a.js  searchindex-c4a7df5b.js  searchindex-d92604f8.js  searchindex-f0fd87f2.js  testing-and-release.html  toc-18d46400.js  toc-7fcd72d4.js  toc-8eaf8b87.js  toc-fea1ade6.js  toc.html  verification.html
.github/workflows/: code.yml
book/: book.toml
book/src/: SUMMARY.md  api.md  architecture.md  certification.md  codegen.md  emitted-crate.md  hardening-matrix.md  hardening-status.md  intake.md  introduction.md  overview.md  readiness-scorecard.md  release.md  testing-and-release.md  verification.md
src/: bundle.rs  c.rs  config.rs  consumer.rs  contract.rs  corpus.rs  crategen.rs  emit.rs  error.rs  files.rs  fingerprint.rs  gate.rs  generate.rs  intake.rs  ir.rs  lib.rs  link.rs  linkgen.rs  lower.rs  output.rs  projection.rs  request.rs  typemap.rs  verify.rs
src/intake/: adapters.rs  evidence.rs  mod.rs  source.rs
test/stress/: ffmpeg.rs  freetype.rs  linux_kernel.rs  openssl.rs  sqlite.rs  torture.rs  zlib.rs
tests/: artifact_boundaries.rs  big_surfaces.rs  closure_ledger.rs  common.rs  contract_h1.rs  end_to_end.rs  failure_matrix_gate.rs  failure_matrix_lower.rs  failure_matrix_pipeline.rs  h4_native.rs  h5_pipeline.rs  incomplete_support.rs  legacy_emitter_regressions.rs  library_examples.rs  packed_policy.rs  parc_pipeline.rs  placeholder_hardening.rs  platform_targets.rs  preservation_corpus.rs  root_api.rs  source_workflows.rs  support_tiers.rs  validation_fixtures.rs
tests/native-fixtures/: h4_abi.c
tests/pipeline-fixtures/: h5_ambiguous_one.c  h5_ambiguous_two.c  h5_api.h  h5_cpp.hpp  h5_dependency.c  h5_duplicate_one.c  h5_duplicate_two.c  h5_exact.c  h5_negative.c  h5_provider.c  h5_shared.c  h5_wrong_target.c
tests/pipeline_support/: matrix.rs
tests/support/: mod.rs
tools/: run-filtered-test.sh  test-package.sh
