[package]
name = "gerc"
version = "0.1.0"
edition = "2021"
authors = ["Trim Bresilla"]
description = "Rust lowering and emission layer in the PARC/LINC/GERC pipeline — generates Rust FFI bindings from C analysis"
license = "MIT/Apache-2.0"
keywords = ["c", "ffi", "bindings", "codegen"]
categories = ["development-tools::ffi", "code-generation"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "=1.0.145"

[dev-dependencies]
linc = { path = "../linc" }
parc = { path = "../parc" }
