[package]
name = "follang-gerc"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["Trim Bresilla"]
description = "Rust lowering and emission layer in the PARC/LINC/GERC pipeline — generates Rust FFI bindings from C analysis"
license = "MIT/Apache-2.0"
repository = "https://github.com/follang/gerc"
homepage = "https://github.com/follang/gerc"
documentation = "https://docs.rs/follang-gerc"
readme = "README.md"
keywords = ["c", "ffi", "bindings", "codegen"]
categories = ["development-tools::ffi", "code-generation"]
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE-*", "/README.md"]

[lib]
name = "gerc"

[dependencies]
blake3 = "1"
linc = { package = "follang-linc", version = "0.1.0", path = "../linc", default-features = false, features = ["contracts"] }
parc = { package = "follang-parc", version = "0.16.0", path = "../parc" }
thiserror = "2"
